--- a/public/tuiter/style.css
+++ b/public/tuiter/style.css
@@ -2,6 +2,10 @@
     background-color: black;
 }
 
+.wd-explore-font {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .wd-left-margin {
     margin-left: 16px;
 }
@@ -32,7 +36,31 @@
     margin-top: 10px;
     float: right;
 }
-/* 
-.icon {
-    position: relative;
-} */
+
+.grid-row {
+    clear: both;
+}
+
+.grid-col {
+    width: 16.6%;
+    float: left;
+}
+
+.wd-tab-font-style {
+    color: rgb(110, 118, 125);
+    font-size: 15px;
+}
+
+.wd-tab-font-padding {
+    margin: 16px;
+    padding: 16px;
+}
+
+.wd-tab-font-style-highlight {
+    color: rgb(29, 161, 242);
+    font-size: 15px;
+}
+
+.wd-tab-border-highlight {
+    border-bottom: solid 5px rgb(29, 161, 242);
+}
