--- a/public/labs/a4/bootstrap/index.css
+++ b/public/labs/a4/bootstrap/index.css
@@ -202,3 +202,13 @@ p#id-selector-2 {
 .min-height-150 {
     height: 150px;
 }
+
+.btn-primary.override-bs {
+    background-color: #a90dfd;
+    border-color: #fd0d51;
+    border-width: 10px;
+    border-radius: 20px;
+    border-style: dashed;
+    font-size: 2em;
+    font-weight: bolder;
+}
