--- a/public/tuiter/explore.css
+++ b/public/tuiter/explore.css
@@ -18,3 +18,13 @@
 .wd-suggested-post-border {
     border-bottom: solid 0.1px rgba(185, 195, 204, 0.5);
 }
+
+.profile-pic {
+    border-radius: 50px;
+}
+
+.carousel-caption {
+    width:100%;
+    height:0%;
+    text-align: left;
+}
