--- a/public/tuiter/explore.css
+++ b/public/tuiter/explore.css
@@ -23,14 +23,15 @@
     border-bottom: solid 0.1px rgba(185, 195, 204, 0.5);
 }
 
-.profile-pic {
-    border-radius: 50px;
-    width: fit-content;
-    height: fit-content;
-}
-
 .carousel-caption {
-    width:100%;
-    height:0%;
+    position: absolute;
+    right: 15%;
+    bottom: -1rem;
+    left: 1%;
+    padding-top: 1.25rem;
+    /* padding-bottom: 1.25rem; */
+    color: #fff;
     text-align: left;
+    font-size: xx-large;
+    font-weight: bold;
 }
