Finish a4 boostrap sp22

--- a/public/tuiter/explore.css
+++ b/public/tuiter/explore.css
@@ -48,11 +48,11 @@
 }
 
 .fg-light-gray {
-    color: rgba(255, 255, 255, 0.829)
+    color: rgba(255, 255, 255, 0.829);
 }
 
 .fg-white {
-    color: rgb(255, 255, 255)
+    color: rgb(255, 255, 255);
 }
 
 .hide {
@@ -106,3 +106,11 @@
     border-color: transparent;
   }
 
+  .navbar-nav .nav-link {
+      color:  rgb(75, 74, 74);
+  }
+
+  .navbar-nav > .active > a { 
+    color: white;
+    border-bottom: 5px solid rgba(0, 132, 255, 0.87);
+}
