--- a/public/labs/a5/js/index.css
+++ b/public/labs/a5/js/index.css
@@ -3,3 +3,16 @@
     color: white;
   }
   
+  .class-1 {
+    background-color: blue;
+    color: white;
+  } */
+  
+  .class-2 {
+    background-color: green;
+    color: yellow;
+  }
+
+  .im-hidden {
+    display:none;
+  }
