--- a/public/tuiter/ExploreScreen/explore.css
+++ b/public/tuiter/ExploreScreen/explore.css
@@ -1,12 +1,9 @@
+.profile-pic {
+    border-radius: 50px;
+    width: 70%;
+}
+
 .fa-stack {
     margin-left: -14px;
     margin-top: -3px;
-}
-
-.fg-white {
-    color: rgb(255, 255, 255);
-}
-
-.fg-style-bold {
-    font-weight: bold;
 }
