--- a/public/tuiter/ExploreScreen/explore.css
+++ b/public/tuiter/ExploreScreen/explore.css
@@ -1,9 +1,109 @@
+.wd-rounded-corners-all-around {
+    border-radius: 50px;
+}
+
+.input-group-text {
+    background-color: transparent;
+}
+
+.fg-style-bold {
+    font-weight: bold;
+}
+/* 
+.follow-top-margin {
+    margin-top: 6%;
+} */
+
+.wd-suggested-post-border {
+    border-bottom: solid 0.1px rgba(185, 195, 204, 0.5);
+}
+
+
 .profile-pic {
     border-radius: 50px;
     width: 70%;
 }
 
+/* .follow-btn-margin {
+    margin-top: 10%;
+} */
+
+.carousel-caption {
+    position: absolute;
+    right: 15%;
+    /* bottom: -1rem; */
+    /* left: 1%; */
+    padding-top: 1.25rem;
+    color: #fff;
+    text-align: left;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+.fg-color-gray {
+    color:gray;
+}
+
+.fg-light-gray {
+    color: rgba(255, 255, 255, 0.829);
+}
+
+.fg-white {
+    color: rgb(255, 255, 255);
+}
+
+.hide {
+    display: none;
+}
+
 .fa-stack {
     margin-left: -14px;
     margin-top: -3px;
+}
+
+
+.btn-custom {
+    background-color: rgba(255, 255, 255, 0.952);
+    color: black;
+    font-weight: bold;
+}
+
+  .list-group-content .list-group-item {
+    background-color: rgba(15, 15, 15, 0.952);
+    border-top: 0.5px solid rgba(211, 211, 211, 0.219);
+    border-left-color: rgba(211, 211, 211, 0.219);
+    border-right-color: rgba(211, 211, 211, 0.219);
+    color:white;
+  }
+
+   .list-group-follow-suggestion .list-group-item {
+    background-color: rgba(15, 15, 15, 0.952);
+    /* border-top: 0.5px solid rgba(211, 211, 211, 0.219);
+    border-left-color: rgba(211, 211, 211, 0.219);
+    border-right-color: rgba(211, 211, 211, 0.219); */
+    color:white;
+  }
+
+  .form-control-search {
+    background-color: rgba(48, 47, 47, 0.5);
+    border-color: transparent;
+  }
+
+  .bg-light-gray {
+    background-color: rgba(48, 47, 47, 0.5);
+    color: rgba(211, 211, 211, 0.219);
+    border-color: transparent;
+  }
+
+  .navbar-nav .nav-link {
+      color:  rgb(75, 74, 74);
+  }
+
+  .navbar-nav > .active > a { 
+    color: white;
+    border-bottom: 5px solid rgba(0, 132, 255, 0.87);
+}
+
+.post-picture {
+    border-radius: 18px;
 }
