--- a/src/components/tuiter/ExploreScreen/explore.css
+++ b/src/components/tuiter/ExploreScreen/explore.css
@@ -20,8 +20,8 @@
 
 
 .profile-pic {
-    border-radius: 50px;
-    width: 70%;
+    border-radius: 100px;
+    width: 80%;
 }
 
 /* .follow-btn-margin {
@@ -76,8 +76,8 @@
     color:white;
   }
 
-   .list-group-follow-suggestion .list-group-item {
-    background-color: rgba(15, 15, 15, 0.952);
+.list-group-follow-suggestion .list-group-item {
+    /* background-color: rgba(15, 15, 15, 0.952); */
     /* border-top: 0.5px solid rgba(211, 211, 211, 0.219);
     border-left-color: rgba(211, 211, 211, 0.219);
     border-right-color: rgba(211, 211, 211, 0.219); */
@@ -118,7 +118,7 @@
 
 .post-item-background {
     border: none;
-    background-color: transparent;
+    /* background-color: transparent; */
     border-bottom: solid rgba(211, 211, 211, 0.219) 1px;
 }
 
